The Samba-Bugzilla – Bug 12161
Fix CTDB cumulative takeover timeout
Last modified: 2016-09-22 08:18:23 UTC
This accidentally includes running the IP allocation algorithm
Created attachment 12384 [details] Patch for 4.4
Created attachment 12385 [details] Patch for 4.5rc
Hi Karolin, This is ready for v4-4 and v4-5.
Pushed to autobuild-v4-5-test.
Pushed to v4-5-test.
Pushed to autobuild-v4-4-test.
Pushed to both branches. Closing out bug report. Thanks!